@@ -13,6 +13,7 @@
 - TW-1440 "task import" from STDIN (thanks to Renato Alves).
 - TW-1454 Redundant dependency should not stop modification  (thanks to Tomas
           Babej).
+- TW-1527 Extra spaces added around slashes (thanks to Renato Alves).
 - TW-1572 Better urgency inheritance (thanks to Jens Erat).
 - TW-1600 Filtering "regressions"(?) in task-2.4.3, task-2.4.4 (thanks to Ralph
           Bean).
